# group2-data-viz

./: .gitignore  PriceDataUpRegulation.json  README.md  cleaning.ipynb  pyproject.toml
Reports/: electricity_production_report.pbix
data/: cleaned_fingrid_data.csv  cleaned_fingrid_data_with_missing.csv
data/extra/: porssisahko.csv
python_scripts/: pbi_autocor.py  pbi_cross_cor.py  pbi_cross_cor2.py  pbi_timeseries.py  upload_to_postgres.py
